import groovy.json.JsonSlurper

plugins {
    id "java"
}

repositories {
    mavenCentral()
    maven { url "https://repo.gradle.org/gradle/libs-releases" } // for gradle-tooling-api
    flatDir { dirs mcreator_path + '/lib' }
    flatDir { dirs 'C:/Program Files/Pylo/MCreator/lib' }
}

group = 'net.nerdypuzzle.geckolib'
version = new JsonSlurper().parse(file('src/main/resources/plugin.json'))['info']['version']

// MCreator 2026.2 requires Java 25 (use MCreator-bundled JBR via org.gradle.java.home)
java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

compileJava {
    options.compilerArgs += ['-Xlint:deprecation', '-Xlint:unchecked']
    options.encoding = 'UTF-8'
}

dependencies {
    implementation project(':MCreator')
    implementation fileTree(dir: 'C:/Program Files/Pylo/MCreator/lib', include: ['*.jar'])
}

tasks.jar {
    archiveFileName.set("GeckoLib_Reborn_Plugin.zip")
    manifest {
        attributes 'Class-Path': configurations.runtimeClasspath.collect { it.name }.join(' ')
    }
}

tasks.register('runMCreatorWithPlugin', JavaExec) {
    dependsOn jar

    environment("MCREATOR_PLUGINS_FOLDER", file("./build/libs"))
    environment("MCREATOR_PLUGINS_DEV", "")

    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'

    classpath = project(':MCreator').sourceSets.main.runtimeClasspath

    main = 'net.mcreator.Launcher'

    workingDir = mcreator_path
}

subprojects { subproject ->
    subproject.plugins.withType(JavaPlugin) {
        test {
            dependsOn rootProject.jar

            environment("MCREATOR_PLUGINS_FOLDER", new File(rootProject.projectDir, "/build/libs"))
            environment("MCREATOR_PLUGINS_DEV", "")

            workingDir = mcreator_path
        }
    }
}
